# go2rust

./: .gitignore  AGENTS.md  ARCHITECTURAL_ISSUES.md  FUTURE_IMPROVEMENTS.md  INTERFACE_FIX_PLAN.md  LICENSE  LOOP_PROTOCOL.md  NEXT_STEPS.md  README.md  REARCHITECTURE.md  ROADMAP.md  TODO_PHASE_6_AND_7.md  generate.go  generator.go  go.mod  hk.pkl  main.go  parse.go  ralph_analyst.sh  ralph_loop.sh  run_loop.sh  test.bats  test.sh  test_assert.go  test_assert.rs  test_comma_ok.go  test_comma_ok.rs  test_conv.go  test_conv.rs  test_parse.go  test_ptr.go  test_ptr.rs  tests.bats  translate.go  translator.go  transpile.go
.analysis/: README.md
.claude/: settings.json  settings.local.json
.github/: FUNDING.yml
go/: README_TYPES.md  captures.go  concurrency.go  config.go  context.go  context_test.go  decl.go  expr.go  external_packages.go  globals.go  imports.go  main.go  package_loader.go  project.go  project_test.go  slice_nil_test.go  stdlib.go  stdlib_concurrency.go  stmt.go  stmt_preprocess.go  stub_generator.go  transpile.go  typeinfo.go  types.go  unified_transpiler.go  utils.go  vartable.go
tests/: README.md  TEST_ORGANIZATION.md
tests/XFAIL/external_simple/: Cargo.toml  go.mod  main.go  main.rs
tests/external_packages/: .go2rust.toml  Cargo.toml  expected_output.txt  go.mod  main.rs
tests/external_packages/external_stubs/github_com_stretchr_testify_assert/: Cargo.toml  lib.rs
tests/external_simple/: .go2rust.toml  Cargo.toml  expected_output.txt  main.rs
tests/external_simple/external_stubs/github_com_shopspring_decimal/: Cargo.toml  lib.rs
(+678 files in other folders)
