
[workspace]
members = [
    ".",
    "external_stubs/github_com_stretchr_testify_assert",
]

[package]
name = "external_packages"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "external_packages"
path = "main.rs"

[dependencies]
github_com_stretchr_testify_assert = { path = "external_stubs/github_com_stretchr_testify_assert" }
